--- a/frontend/app/views/joiner/thankyou.scala.html
+++ b/frontend/app/views/joiner/thankyou.scala.html
@@ -21,71 +21,93 @@
 
 @main(title, containerPadding = false) {
 
-    <section class="content__container content__container--slim">
-        <h1 class="section-headline">Hello @member.firstName.<br/> Welcome to Guardian Membership!</h1>
-        <p>You're the newest member of the Guardian Membership community and we're thrilled to have you on board.</p>
-        <p>We've sent confirmation of your membership to @member.email</p>
-    </section>
+    <main class="page-container__inner">
+        <section class="page-header">
+            <h1 class="page-headline">Hello @member.firstName.<br/> Welcome to Guardian Membership!</h1>
+            <p class="page-intro">You're the newest member of the Guardian Membership community and we're thrilled to have you on board.</p>
+            <p class="page-intro">We've sent confirmation of your membership to @member.email</p>
+        </section>
 
-    <section class="content__container content__container--slim">
-        <h2 class="content__headline">Your membership summary</h2>
-        <table class="table table--responsive-font table--striped" role="grid">
-            <tr role="row">
-                <th role="rowheader">Tier</th>
-                <td>@member.tier</td>
-            </tr>
-            <tr role="row">
-                <th role="rowheader">Start date</th>
-                <td>@subscription.startDate.pretty</td>
-            </tr>
-            @for(card <- cardOpt) {
-                <tr role="row">
-                    <th role="rowheader">Amount paid today</th>
-                    <td>@subscription.planAmount.pretty</td>
-                </tr>
-                <tr role="row">
-                    <th role="rowheader">
-                        @if(subscription.annual) { Annual } else { Monthly } payment
-                    </th>
-                    <td>@subscription.planAmount.pretty</td>
-                </tr>
-                <tr role="row">
-                    <th role="rowheader">Next payment</th>
-                    <td>@subscription.endDate.pretty</td>
-                </tr>
-                <tr role="row">
-                    <th role="rowheader">Card</th>
-                    <td>•••• •••• •••• •••• @card.last4</td>
-                </tr>
-            }
-        </table>
-    </section>
+        <section class="page-section page-section--bordered">
+            <div class="page-section__lead-in">
+                <h2 class="page-section__headline">Your membership summary</h2>
+            </div>
+            <div class="page-section__content">
+                <table class="table table--responsive-font table--striped" role="grid">
+                    <tr role="row">
+                        <th role="rowheader">Tier</th>
+                        <td>@member.tier</td>
+                    </tr>
+                    <tr role="row">
+                        <th role="rowheader">Start date</th>
+                        <td>@subscription.startDate.pretty</td>
+                    </tr>
+                    @for(card <- cardOpt) {
+                        <tr role="row">
+                            <th role="rowheader">Amount paid today</th>
+                            <td>@subscription.planAmount.pretty</td>
+                        </tr>
+                        <tr role="row">
+                            <th role="rowheader">
+                                @if(subscription.annual) { Annual } else { Monthly } payment
+                            </th>
+                            <td>@subscription.planAmount.pretty</td>
+                        </tr>
+                        <tr role="row">
+                            <th role="rowheader">Next payment</th>
+                            <td>@subscription.endDate.pretty</td>
+                        </tr>
+                        <tr role="row">
+                            <th role="rowheader">Card</th>
+                            <td>•••• •••• •••• •••• @card.last4</td>
+                        </tr>
+                    }
+                </table>
+            </div>
+        </section>
+
 
     @eventDetailsOpt match {
         case Some((event, iframeUrl)) => {
-            <section class="content__container content__container--slim">
-                <h2 class="content__headline">Complete your ticket purchase</h2>
-                <p>
-                    We're currently improving our ticket purchasing system, in the meantime you will have to enter
-                    some details again.
-                </p>
 
-                <iframe src="@iframeUrl" width="100%" height="@iframeHeight(event)" frameborder="0" vspace="0" hspace="0"
-                        marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe>
+            <section class="page-section page-section--bordered">
+                <div class="page-section__lead-in">
+                    <h2 class="page-section__headline">Complete your ticket purchase</h2>
+                </div>
+                <div class="page-section__content">
+                    <p>
+                       We're currently improving our ticket purchasing system, in the meantime you will have to enter
+                       some details again.
+                    </p>
+                    <iframe src="@iframeUrl" width="100%" height="@iframeHeight(event)" frameborder="0" vspace="0"
+                    hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe>
+                </div>
             </section>
         }
 
         case None => {
-            <section class="content__container content__container--slim">
-                <h2 class="content__headline">Tell your friends</h2>
-                @fragments.social(joinThankyou)
+
+            <section class="page-section page-section--bordered">
+                <div class="page-section__lead-in">
+                    <h2 class="page-section__headline">Tell your friends</h2>
+                </div>
+                <div class="page-section__content">
+                    @fragments.social(joinThankyou)
+                </div>
             </section>
-            <section class="content__container content__container--slim">
-                <h2 class="content__headline">Find Guardian Live events</h2>
-                <a class="action" href="/events">Get started</a>
+
+            <section class="page-section page-section--bordered">
+                <div class="page-section__lead-in">
+                    <h2 class="page-section__headline">Find Guardian Live events</h2>
+                </div>
+                <div class="page-section__content">
+                    <a class="action" href="/events">Get started</a>
+                </div>
             </section>
         }
     }
+
+    </main>
 
     @fragments.analytics.googleJoinerConversion(member.tier)
     @fragments.analytics.facebookJoinerConversion(member.tier)
