--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -159,7 +159,7 @@
         <div class="event-content__container u-cf">
 
             <div class="event-content__body">
-                <div class="event__description" itemprop="description">@Html(event.description.getOrElse(EBRichText("foobar", "foobarhtml")).cleanHtml)</div>
+                <div class="event__description copy" itemprop="description">@Html(event.description.getOrElse(EBRichText("foobar", "foobarhtml")).cleanHtml)</div>
                 <div class="event__social">
                     <div class="event__social-header hidden-mobile">Share this</div>
                     @fragments.social(eventDetail(event))
