--- a/frontend/assets/stylesheets/pages/_events-detail.scss
+++ b/frontend/assets/stylesheets/pages/_events-detail.scss
@@ -434,6 +434,7 @@
         .sale-dates__header {
             @include fs-textSans(3);
             font-weight: bold;
+            display: inline;
         }
 
         .sale-dates__list {
