Modification to toggle.js – remove auto-hiding of any toggleable element (inc case we want to invert toggle initial state)

--- a/frontend/app/views/event/list.scala.html
+++ b/frontend/app/views/event/list.scala.html
@@ -49,7 +49,9 @@
                 </ul>
 
 
-                <ul class="events-list hygrid hygrid--wrapped hygrid--2 u-unstyled js-toggle-elm" id="js-toggle-past-events">
+                <ul class="events-list hygrid hygrid--wrapped hygrid--2 u-unstyled js-toggle-elm"
+                    id="js-toggle-past-events"
+                    style="display: none;">
                     @for(event <- eventPortfolio.pastEvents.get.slice(4, 26)) {
                         @fragments.event.item(event, false, isMinimal=true, isCard=true)
                     }
