Add Next-gen style tone colour helper classes

--- a/frontend/assets/stylesheets/style.scss
+++ b/frontend/assets/stylesheets/style.scss
@@ -22,6 +22,7 @@
 @import 'base/forms';
 @import 'base/tables';
 @import 'base/images';
+@import 'base/tones';
 
 /* ==========================================================================
    Utility
