--- a/frontend/app/views/event/guardianLive.scala.html
+++ b/frontend/app/views/event/guardianLive.scala.html
@@ -1,12 +1,11 @@
 @(eventPortfolio: model.EventPortfolio, pageInfo: model.PageInfo)(implicit token: play.filters.csrf.CSRF.Token)
 
 @main("Events", containerPadding=false, htmlClass="events-bg theme--guardian-live", pageInfo=pageInfo) {
-    <section class="header-bar">
-        <h1 class="header-bar__title">
-            Events, discussions, debates, interviews, keynote speeches and festivals exclusively for Guardian Members
-        </h1>
-        <i class="event-logo icon-guardian-live"></i>
-    </section>
+
+    @fragments.event.headerBar(
+        "Events, discussions, debates, interviews, keynote speeches and festivals exclusively for Guardian Members",
+        "guardian-live"
+    )
 
     @views.html.event.list(eventPortfolio, pageInfo, showPastEvents=true)
 }
