updated flash message fragment to use argument naming Opt convention

--- a/frontend/app/views/fragments/notifications/flashMessage.scala.html
+++ b/frontend/app/views/fragments/notifications/flashMessage.scala.html
@@ -1,7 +1,7 @@
-@(error: Option[String])
+@(errorOpt: Option[String])
 
-@for(err <- error) {
+@for(error <- errorOpt) {
     <div class="flash-message flash-message--error">
-        @err
+        @error
     </div>
 }
