--- a/frontend/assets/stylesheets/components/_action.scss
+++ b/frontend/assets/stylesheets/components/_action.scss
@@ -116,7 +116,7 @@
 }
 
 .action--external {
-    background-color: $black;
+    background-color: transparent;
     border: 1px solid transparentize($white, 0.5);
     width: 100%;
 
