added errorTemplate to arguments

--- a/frontend/app/views/staff/unauthorised.scala.html
+++ b/frontend/app/views/staff/unauthorised.scala.html
@@ -1,4 +1,4 @@
-@(staffEmail: String, errorOpt: Option[String] = None, errorTemplateOpt: Option[String])
+@(staffEmail: String, errorOpt: Option[String] = None, errorTemplateOpt: Option[String] = None)
 
 @import configuration.Config
 
