--- a/frontend/app/views/event/list.scala.html
+++ b/frontend/app/views/event/list.scala.html
@@ -49,9 +49,7 @@
                 </ul>
 
 
-                <ul class="events-list hygrid hygrid--wrapped hygrid--2 u-unstyled js-toggle-elm"
-                    id="js-toggle-past-events"
-                    style="display: none;">
+                <ul class="events-list hygrid hygrid--wrapped hygrid--2 u-unstyled" id="js-toggle-past-events" data-toggle-hidden>
                     @for(event <- eventPortfolio.pastEvents.get.slice(4, 26)) {
                         @fragments.event.item(event, false, isMinimal=true, isCard=true)
                     }
