--- a/frontend/app/views/fragments/event/headerBar.scala.html
+++ b/frontend/app/views/fragments/event/headerBar.scala.html
@@ -1,6 +1,6 @@
 @(title: String, category: String = "")
 
-<section class="header-bar@if(category){ tone-@category}">
+<section class="header-bar@if(category){ tone-@category--trans}">
     <h1 class="header-bar__title">@title</h1>
     <i class="event-logo@if(category){ icon-@category}"></i>
 </section>
