--- a/frontend/assets/stylesheets/base/_tones.scss
+++ b/frontend/assets/stylesheets/base/_tones.scss
@@ -3,9 +3,39 @@
    ========================================================================== */
 
 .tone-masterclasses {
-    background-color: transparentize($mem-mc-top, .1);
+    background-color: $mem-mc-top;
+
+    a {
+        border-bottom-color: transparentize($c-neutral3, .5);
+    }
+    a:hover {
+        border-bottom-color: $c-neutral1;
+    }
 }
 .tone-guardian-live {
+    color: $white;
+    background-color: $mem-live-top;
+
+    a {
+        border-bottom-color: transparentize($white, .5);
+    }
+    a:hover {
+        border-bottom-color: $white;
+    }
+}
+
+.tone-masterclasses--accent {
+    background-color: $mem-mc-accent;
+}
+.tone-guardian-live--accent {
+    color: $white;
+    background-color: $mem-live-accent;
+}
+
+.tone-masterclasses--trans {
+    background-color: transparentize($mem-mc-top, .1);
+}
+.tone-guardian-live--trans {
     color: $white;
     background-color: transparentize($mem-live-top, .1);
 }
