--- a/frontend/assets/stylesheets/pages/_events-list.scss
+++ b/frontend/assets/stylesheets/pages/_events-list.scss
@@ -18,7 +18,7 @@
         border-bottom: rem(1px) solid $mem-live-accent;
     }
 
-    .theme--masterclass & {
+    .theme--masterclasses & {
         border-bottom: rem(1px) solid $mem-mc-accent;
     }
 
@@ -66,7 +66,7 @@
     .theme--guardian-live & {
         content: 'Sorry, no matching events were found.';
     }
-    .theme--masterclass & {
+    .theme--masterclasses & {
         content: 'Sorry, no matching Masterclasses were found.';
     }
 }
@@ -402,7 +402,7 @@ $filter-icon-size: 18px;
         float: right;
     }
 
-    .theme--masterclass & {
+    .theme--masterclasses & {
         background-color: $mem-mc-top;
         &:after {
             @extend .icon-arrow-right-black;
