Add clear fix to event content

--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -184,7 +184,7 @@
                             </div>
                         }
 
-                        <div class="event-content__info__inner">
+                        <div class="event-content__info__inner u-cf">
                             <div class="event-content__item event-content__name" itemprop="name">@event.name.text</div>
                             <div class="event-content__item event-content__time event-content--line-divider u-cf">
                                 <div class="event-content__first">
