Staf flow copy changes

--- a/frontend/assets/stylesheets/components/_action.scss
+++ b/frontend/assets/stylesheets/components/_action.scss
@@ -17,6 +17,7 @@
     @include border-radius(50%);
     -webkit-font-smoothing: antialiased;
     vertical-align: bottom;
+    box-sizing: border-box;
 
     &:visited,
     &:hover,
