--- a/frontend/app/views/joiner/staff.scala.html
+++ b/frontend/app/views/joiner/staff.scala.html
@@ -6,8 +6,11 @@
 @import play.twirl.api.Html
 @import model.Faq
 
-@signPostItem(btnText: String, btnSrc: String)(description: Html) = {
+@signPostItem(btnText: String, btnSrc: String, title: String = "")(description: Html) = {
     <li class="signpost-item signpost-item--sign">
+        @if(title){
+            <h4 class="signpost-item__title">@title</h4>
+        }
         <p class="signpost-item__description">@description</p>
         <div class="signpost__cta">
             <a class="action action--no-bottom-margin" href="@btnSrc">@btnText</a>
@@ -18,66 +21,68 @@
 @main("Staff Membership", containerPadding=false) {
 
     <main class="page-container__inner" role="main">
+
         @fragments.notifications.flashMessage(error)
-        <section class="page-header">
-            <h1 class="page-headline">Guardian Staff Membership</h1>
-            <p class="page-intro">All permanent Guardian staff can sign up to the Partner tier of Guardian membership for free (equivalent to £15/month)</p>
-        </section>
+
+        @fragments.page.pageHeader("Guardian Staff Membership",
+            Some("All permanent Guardian staff can sign up to the Partner tier of Guardian membership for free (equivalent to £15/month)"))
 
         <section class="page-section page-section--bordered">
             <div class="page-section__lead-in">
-                <h2 class="page-section__headline">Join Guardian Staff Membership now</h2>
+                <h2 class="page-section__headline">Join</h2>
             </div>
             <div class="page-section__content">
                 @staffEmail.identityEmail.fold {
-                    <p>
-                        To join Guardian Staff Membership you must have a Guardian Identity account set up using
-                        your work email address ending @@theguardian.com (@@guardian.co.uk will work too).
-                    </p>
+                    <p>Before joining you must have a  Guardian Identity account set up with your work email address.</p>
 
                     <ul class="signpost u-unstyled">
                         @signPostItem("Create account", Config.idWebAppRegisterUrl(routes.Joiner.staff.url)){
-                            Set up a <strong>new</strong> Guardian Identity account
+                            Create a Guardian Identity account with your work email address
                         }
                         <li class="signpost-item signpost-item--divider">or</li>
                         @signPostItem("Sign in", Config.idWebAppSigninUrl(routes.Joiner.staff.url)){
-                            Use an <strong>existing</strong> Guardian Identity account
+                            Sign in to Guardian Identity with your work email address
                         }
                     </ul>
+
                 } { identityEmail =>
-                    <div class="u-cf">
+
+                    <div class="user-welcome u-cf copy">
                         @for(srcUrl <- avatarUrl){
-                            <img class="user-img" src="@srcUrl" alt="User Image"/>
+                            <img class="user-welcome__image user-img" src="@srcUrl" alt="User Image"/>
                         }
-                        <p>
+                        <div class="user-welcome__content">
                             @for(name <- displayName){
-                                Hello <strong>@displayName</strong>.
+                                <h3 class="user-welcome__title">Hello <strong>@displayName</strong>. Not you? <a href="@Config.idWebAppUrl/signout">Sign out</a></h3>
                             }
-                            Glad to see you've decided to join Guardian Staff Membership.
-                        </p>
+                            <div class="user-welcome__info">
+                                <p>Glad to see you've decided to join Guardian Staff Membership.</p>
+                            </div>
+                        </div>
                     </div>
 
                     @if(staffEmail.emailsMatch) {
+                        <p>Join Guardian Staff Membership as <strong>@identityEmail</strong></p>
                         <a class="action action--no-bottom-margin" href="@routes.Joiner.enterStaffDetails">Join</a>
+                        <a class="action action--secondary-button action--no-bottom-margin" href="@Config.idWebAppUrl/signout">Sign out</a>
                     } else {
-                        <p>
-                            Currently your account is set up with <strong>@identityEmail</strong>. To join Guardian
-                            Staff Membership you must have a Guardian Identity account set up using your work email
-                            address ending @@theguardian.com (@@guardian.co.uk will work too).
-                        </p>
+                        <p>Before joining you must have a Guardian Identity account set up using your work email address <strong>(@staffEmail.googleEmail)</strong></p>
 
+                        <p>You're signed in as <strong>@identityEmail</strong>, unfortunately this isn't a valid email address for Guardian Staff Membership.</p>
+                        <p>You have two options to join:</p>
                         <ul class="signpost u-unstyled">
                             <li class="signpost-item signpost-item--sign">
-                                <p class="signpost-item__description">Change email address to <strong> @staffEmail.googleEmail </strong> Guardian Identity account</p>
+                                <h4 class="signpost-item__title">Option 1</h4>
+                                <p class="signpost-item__description">Change email address to <strong>@staffEmail.googleEmail</strong> Guardian Identity account</p>
                                 <div class="signpost__cta">
                                     <form action="@routes.Joiner.updateEmailStaff" method="POST">
                                         @CSRF.formField
-                                        <button class="action action--no-bottom-margin" type="submit">Change email and Join now</button>
+                                        <button class="action action--no-bottom-margin" type="submit">Change email for me</button>
                                     </form>
                                 </div>
                             </li>
                             <li class="signpost-item signpost-item--divider">or</li>
-                            @signPostItem("Create new account", Config.idWebAppRegisterUrl(routes.Joiner.staff.url)){
+                            @signPostItem("Create a new account", Config.idWebAppRegisterUrl(routes.Joiner.staff.url), "Option 2"){
                                 Set up a <strong>new</strong> Guardian Identity account
                             }
                         </ul>
@@ -88,7 +93,7 @@
 
         <section class="page-section page-section--bordered">
             <div class="page-section__lead-in">
-                <h2 class="page-section__headline">Partner benefits</h2>
+                <h2 class="page-section__headline">Benefits</h2>
             </div>
             <div class="page-section__content">
                 @fragments.benefits.detail(Tier.Partner)
