--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -202,7 +202,7 @@
                                         <span class="event-content__address" itemprop="address">@addressLine</span>
                                     }
                                     @for(googleMapsLink <- event.venue.googleMapsLink) {
-                                        <a href="@googleMapsLink" class="js-track-click" data-tracking-name="Event Google Map">Google Map</a>
+                                        <a href="@googleMapsLink" data-link-name="Event Google Map">Google Map</a>
                                     }
                                 </div>
                             </div>
