--- a/frontend/app/views/joiner/staff.scala.html
+++ b/frontend/app/views/joiner/staff.scala.html
@@ -7,7 +7,7 @@
 @import model.Faq
 
 @signPostItem(btnText: String, btnSrc: String, title: String = "")(description: Html) = {
-    <li class="signpost-item signpost-item--sign">
+    <li class="signpost-item">
         @if(title){
             <h4 class="signpost-item__title">@title</h4>
         }
@@ -39,7 +39,6 @@
                         @signPostItem("Create account", Config.idWebAppRegisterUrl(routes.Joiner.staff.url)){
                             Create a Guardian Identity account with your work email address
                         }
-                        <li class="signpost-item signpost-item--divider">or</li>
                         @signPostItem("Sign in", Config.idWebAppSigninUrl(routes.Joiner.staff.url)){
                             Sign in to Guardian Identity with your work email address
                         }
@@ -71,9 +70,11 @@
                         <p>You're signed in as <strong>@identityEmail</strong>, unfortunately this isn't a valid email address for Guardian Staff Membership.</p>
                         <p>You have two options to join:</p>
                         <ul class="signpost u-unstyled">
-                            <li class="signpost-item signpost-item--sign">
+                            <li class="signpost-item">
                                 <h4 class="signpost-item__title">Option 1</h4>
-                                <p class="signpost-item__description">Change email address to <strong>@staffEmail.googleEmail</strong> Guardian Identity account</p>
+                                <p class="signpost-item__description">
+                                    Allow Guardian membership to change your Guardian Identity email address from <strong>@identityEmail</strong> to <strong>@staffEmail.googleEmail</strong
+                                </p>
                                 <div class="signpost__cta">
                                     <form action="@routes.Joiner.updateEmailStaff" method="POST">
                                         @CSRF.formField
@@ -81,9 +82,8 @@
                                     </form>
                                 </div>
                             </li>
-                            <li class="signpost-item signpost-item--divider">or</li>
-                            @signPostItem("Create a new account", Config.idWebAppRegisterUrl(routes.Joiner.staff.url), "Option 2"){
-                                Set up a <strong>new</strong> Guardian Identity account
+                            @signPostItem("Register Now", Config.idWebAppRegisterUrl(routes.Joiner.staff.url), "Option 2"){
+                                Register for a new Guardian Identity account using your work email address <strong>@staffEmail.googleEmail</strong>
                             }
                         </ul>
                     }
